--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,19 @@ header {
     border-radius: 4px;
     
 }
+
+.green {
+    background-color: green;
+}
+
+.yellow {
+    background-color: yellow;
+}
+
+.orange {
+    background-color: orange;
+}
+
 .red{
     background-color: rgba(255, 0, 0, .5);
 }
@@ -40,16 +53,32 @@ header {
 .city {
     border-bottom: 2px solid black;
 }
+/* cities history */
+
+.cityEl {
+    flex: 1 1 50%;
+    margin: 3px;
+    padding: 1px;
+
+}
+.cityEl p {
+    margin: 1px;
+    font-size: 15px;
+}
+
 /* day box */
+
 .today {
     padding: 5px;
     border: 1px solid black;
     margin: 5px;
-    display: block;
+    
     background-color: #0C1446;
     color:aliceblue
     
 }
+
+
 
 .forecast {
     padding: 5px;
